# inventory-system

./: docker-compose.yml
backend/: .gitignore  Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: f179cb34598b_create_product_order_customer_tables.py
backend/app/: main.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/endpoints/: customers.py  orders.py  products.py
backend/app/core/: config.py  database.py
backend/app/crud/: __init__.py  customer.py  order.py  product.py
backend/app/models/: __init__.py  customer.py  order.py  product.py
backend/app/schemas/: __init__.py  customer.py  order.py  product.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: Sidebar.tsx
frontend/src/lib/: axios.ts
frontend/src/pages/: Customers.jsx  Dashboard.jsx  Orders.jsx  Products.jsx
